--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -3,10 +3,12 @@ FROM python:latest
 RUN apt-get update && apt-get install -y \
     vim tmux tree htop libelf1
 
-RUN useradd -ms /bin/bash edon
+RUN pip3 install --upgrade pip
+RUN pip3 install jupyter
+RUN useradd -ms /bin/bash europa
 
-USER edon
-WORKDIR /home/edon
+USER europa
+WORKDIR /home/europa
 
 ADD .bash_profile .
 ADD .bash_aliases .
