--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -3,10 +3,10 @@ FROM node:latest
 RUN apt-get update && apt-get install -y \
     vim tmux tree htop libelf1
 
-RUN useradd -ms /bin/bash edon
+RUN useradd -ms /bin/bash io
 
-USER edon
-WORKDIR /home/edon
+USER io
+WORKDIR /home/io
 
 ADD .bash_profile .
 ADD .bash_aliases .
